--- a/gdzc/src/main/res/layout/activity_zcdj.xml
+++ b/gdzc/src/main/res/layout/activity_zcdj.xml
@@ -3,8 +3,6 @@
         xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-        <import type="me.tatarka.bindingcollectionadapter.LayoutManagers"/>
-        <variable name="viewModel" type="com.gdzc.zcdj.viewmodel.ZcdjViewModel"/>
         <variable name="appbar" type="com.gdzc.base.AppBar"/>
     </data>
 
@@ -15,7 +13,7 @@
             layout="@layout/app_bar"
             app:appbar="@{appbar}"/>
 
-        <com.pulltofresh.PullToRefreshNestedScrollView
+        <android.support.v4.widget.NestedScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_below="@id/layout_appbar"
@@ -35,14 +33,14 @@
                         android:orientation="horizontal"
                         android:padding="@dimen/margin_horizontal">
                         <TextView style="@style/CommonText"
-                                  android:text="分类号"/>
-                        <TextView style="@style/CommonText"
-                                  android:layout_marginLeft="@dimen/dimen_10"
-                                  android:layout_weight="1"
-                                  android:drawableRight="@mipmap/icon_details"
-                                  android:hint="请选择分类号"
-                                  android:text="@{viewModel.flh.mc}"
-                                  app:clickCommand="@{viewModel.flhCommand}"/>
+                                  android:text="分    类"/>
+                        <TextView
+                            android:id="@+id/tv_flh"
+                            style="@style/CommonText"
+                            android:layout_marginLeft="@dimen/dimen_10"
+                            android:layout_weight="1"
+                            android:drawableRight="@mipmap/icon_details"
+                            android:hint="请选择分类"/>
                     </LinearLayout>
                     <View style="@style/line_cell_light_h"/>
                     <LinearLayout
@@ -52,33 +50,31 @@
                         android:padding="@dimen/margin_horizontal">
                         <TextView style="@style/CommonText"
                                   android:text="单    价"/>
-                        <EditText style="@style/CommonText"
+                        <EditText android:id="@+id/tv_dj"
+                                  style="@style/CommonText"
                                   android:layout_marginLeft="@dimen/dimen_10"
                                   android:layout_weight="1"
                                   android:hint="请输入单价"
-                                  android:inputType="numberDecimal"
-                                  android:text="@={viewModel.dj}"/>
+                                  android:inputType="numberDecimal"/>
                     </LinearLayout>
                     <View style="@style/line_cell_light_h"/>
                     <android.support.v7.widget.AppCompatButton
+                        android:id="@+id/bt_create"
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_margin="@dimen/dimen_10"
                         android:text="生成资产登记表单"
-                        android:textColor="@color/white"
-                        app:clickCommand="@{viewModel.zcdjCommand}"/>
+                        android:textColor="@color/white"/>
                 </LinearLayout>
 
                 <View style="@style/line_cell_light_h"/>
 
                 <android.support.v7.widget.RecyclerView
+                    android:id="@+id/rv_zcdj"
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    app:itemView="@{viewModel.itemView}"
-                    app:items="@{viewModel.items}"
-                    app:layoutManager="@{LayoutManagers.linear()}"/>
+                    android:layout_height="match_parent"/>
             </LinearLayout>
-        </com.pulltofresh.PullToRefreshNestedScrollView>
+        </android.support.v4.widget.NestedScrollView>
 
     </RelativeLayout>
 </layout>
