--- a/gdzc/src/main/res/layout/adapter_zcdj_img_item.xml
+++ b/gdzc/src/main/res/layout/adapter_zcdj_img_item.xml
@@ -3,9 +3,6 @@
         xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-        <import type="android.view.View"/>
-        <import type="com.gdzc.zcdj.model.ZcdjBean.Zcdj"/>
-        <variable name="data" type="Zcdj"/>
     </data>
 
     <LinearLayout
@@ -14,12 +11,15 @@
         android:orientation="horizontal"
         android:padding="@dimen/margin_horizontal">
 
-        <LinearLayout android:layout_width="0dp"
-                      android:layout_height="wrap_content"
-                      android:layout_marginRight="@dimen/dimen_10"
-                      android:layout_weight="1"
-                      android:orientation="vertical">
-            <ImageView android:layout_width="match_parent" android:layout_height="100dp"
+        <LinearLayout
+            android:id="@+id/llayout_zc"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="@dimen/dimen_10"
+            android:layout_weight="1"
+            android:orientation="vertical">
+            <ImageView android:layout_width="match_parent"
+                       android:layout_height="100dp"
                        android:background="@drawable/rect_radius_white"
                        android:scaleType="fitXY"
                        android:src="@mipmap/place_holder"/>
@@ -29,11 +29,13 @@
                       android:text="资产照片"/>
         </LinearLayout>
 
-        <LinearLayout android:layout_width="0dp"
+        <LinearLayout android:id="@+id/llayout_fp"
+                      android:layout_width="0dp"
                       android:layout_height="wrap_content"
                       android:layout_weight="1"
                       android:orientation="vertical">
-            <ImageView android:layout_width="match_parent" android:layout_height="100dp"
+            <ImageView android:layout_width="match_parent"
+                       android:layout_height="100dp"
                        android:background="@drawable/rect_radius_white"
                        android:scaleType="fitXY"
                        android:src="@mipmap/place_holder"/>
