--- a/gdzc/src/main/res/values/styles.xml
+++ b/gdzc/src/main/res/values/styles.xml
@@ -49,6 +49,13 @@
         <item name="android:textColorHint">@color/text_hint</item>
     </style>
 
+    <style name="CommonEdit" parent="CommonBase">
+        <item name="android:padding">@dimen/dimen_10</item>
+        <item name="android:textColor">@color/text_nomal</item>
+        <item name="android:textColorHint">@color/text_hint</item>
+        <item name="android:background">@color/clear</item>
+    </style>
+
     <style name="CommonButton" parent="CommonBase">
         <item name="android:textColor">@color/white</item>
         <item name="android:padding">@dimen/dimen_10</item>
