--- a/gdzc/src/main/res/layout/activity_zcdj.xml
+++ b/gdzc/src/main/res/layout/activity_zcdj.xml
@@ -4,6 +4,7 @@
 
     <data>
         <variable name="appbar" type="com.gdzc.base.AppBar"/>
+        <variable name="viewModel" type="com.gdzc.zcdj.viewmodel.ZcdjViewModel"/>
     </data>
 
     <RelativeLayout android:layout_width="wrap_content"
