--- a/gdzc/src/main/res/layout/activity_flh.xml
+++ b/gdzc/src/main/res/layout/activity_flh.xml
@@ -21,6 +21,7 @@
 
         <LinearLayout android:layout_width="match_parent"
                       android:layout_height="match_parent"
+                      android:background="@color/white"
                       android:layout_below="@id/layout_appbar"
                       android:orientation="vertical">
 
