--- a/gdzc/src/main/res/layout/adapter_zcxg_item.xml
+++ b/gdzc/src/main/res/layout/adapter_zcxg_item.xml
@@ -3,7 +3,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-        <variable name="data" type="com.gdzc.zcbg.model.ZcbgBean.ListBean"/>
+        <variable name="data" type="com.gdzc.zcdj.model.ZcxgBean.ListBean"/>
     </data>
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
