--- a/gdzc/src/main/res/layout/activity_zcdj_edit.xml
+++ b/gdzc/src/main/res/layout/activity_zcdj_edit.xml
@@ -13,11 +13,28 @@
             layout="@layout/app_bar"
             app:appbar="@{appbar}"/>
 
-        <android.support.v7.widget.RecyclerView
-            android:id="@+id/rv_zcbg"
+        <com.pulltofresh.PullToRefreshNestedScrollView
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:layout_below="@id/layout_appbar"/>
+            android:layout_below="@id/layout_appbar"
+            app:ptrMode="disabled">
+            <LinearLayout android:layout_width="match_parent"
+                          android:layout_height="match_parent"
+                          android:orientation="vertical">
 
+                <android.support.v7.widget.RecyclerView
+                    android:id="@+id/rv_zcbg"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"/>
+
+                <TextView android:id="@+id/tv_cch"
+                          style="@style/CommonText"
+                          android:layout_gravity="right"
+                          android:padding="@dimen/dimen_10"
+                          android:text="修改出厂号"
+                          android:textColor="@color/blue_primary"
+                          android:visibility="gone"/>
+            </LinearLayout>
+        </com.pulltofresh.PullToRefreshNestedScrollView>
     </RelativeLayout>
 </layout>
