--- a/gdzc/src/main/res/layout/adapter_cch_item.xml
+++ b/gdzc/src/main/res/layout/adapter_cch_item.xml
@@ -3,7 +3,7 @@
         xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
-        <variable name="data" type="com.gdzc.zcdj.model.ZcxgBean.ListBean"/>
+        <variable name="data" type="com.gdzc.zcdj.model.CchBean.Cch"/>
     </data>
     <android.support.v7.widget.CardView
         android:layout_width="match_parent"
@@ -24,103 +24,24 @@
                 android:paddingBottom="@dimen/dimen_5"
                 android:paddingTop="@dimen/dimen_5">
                 <TextView style="@style/CommonText"
-                          android:text="资产名称："/>
+                          android:text="资产编号："/>
                 <TextView
-                    android:id="@+id/tv_zcmc"
                     style="@style/CommonText"
                     android:layout_marginLeft="@dimen/dimen_10"
                     android:maxWidth="100dp"
                     android:minWidth="80dp"
                     android:padding="0dp"
-                    android:singleLine="true"/>
+                    android:singleLine="true"
+                    android:text="@{data.zcbh}"/>
                 <TextView style="@style/CommonText"
-                          android:text="分类名称："/>
+                          android:text="出  厂  号："/>
                 <TextView
-                    android:id="@+id/tv_flmc"
-                    style="@style/CommonText"
-                    android:layout_marginLeft="@dimen/dimen_10"
-                    android:maxWidth="100dp"
-                    android:minWidth="80dp"
-                    android:singleLine="true"/>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingBottom="@dimen/dimen_5"
-                android:paddingTop="@dimen/dimen_5">
-                <TextView style="@style/CommonText"
-                          android:text="单        价："/>
-                <TextView
-                    android:id="@+id/tv_dj"
-                    style="@style/CommonText"
-                    android:layout_marginLeft="@dimen/dimen_10"
-                    android:maxWidth="100dp"
-                    android:minWidth="80dp"
-                    android:singleLine="true"/>
-                <TextView style="@style/CommonText"
-                          android:text="数        量："/>
-                <TextView
-                    android:id="@+id/tv_sl"
-                    style="@style/CommonText"
-                    android:layout_marginLeft="@dimen/dimen_10"
-                    android:maxWidth="100dp"
-                    android:minWidth="80dp"
-                    android:singleLine="true"/>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingBottom="@dimen/dimen_5"
-                android:paddingTop="@dimen/dimen_5">
-                <TextView style="@style/CommonText"
-                          android:text="成批条数："/>
-                <TextView
-                    android:id="@+id/tv_pl"
-                    style="@style/CommonText"
-                    android:layout_marginLeft="@dimen/dimen_10"
-                    android:maxWidth="100dp"
-                    android:minWidth="80dp"
-                    android:singleLine="true"/>
-                <TextView style="@style/CommonText"
-                          android:text="金        额："/>
-                <TextView
-                    android:id="@+id/tv_je"
-                    style="@style/CommonText"
-                    android:layout_marginLeft="@dimen/dimen_10"
-                    android:maxWidth="100dp"
-                    android:minWidth="80dp"
-                    android:singleLine="true"/>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingBottom="@dimen/dimen_5"
-                android:paddingTop="@dimen/dimen_5">
-                <TextView style="@style/CommonText"
-                          android:text="型        号："/>
-                <TextView
-                    android:id="@+id/tv_xh"
                     style="@style/CommonText"
                     android:layout_marginLeft="@dimen/dimen_10"
                     android:maxWidth="100dp"
                     android:minWidth="80dp"
                     android:singleLine="true"
-                />
-                <TextView style="@style/CommonText"
-                          android:text="规        格："/>
-                <TextView
-                    android:id="@+id/tv_gg"
-                    style="@style/CommonText"
-                    android:layout_marginLeft="@dimen/dimen_10"
-                    android:maxWidth="100dp"
-                    android:minWidth="80dp"
-                    android:singleLine="true"/>
+                    android:text="@{data.cch}"/>
             </LinearLayout>
 
             <LinearLayout
@@ -130,24 +51,51 @@
                 android:paddingBottom="@dimen/dimen_5"
                 android:paddingTop="@dimen/dimen_5">
                 <TextView style="@style/CommonText"
-                          android:text="厂        家："/>
+                          android:text="领  用  人："/>
                 <TextView
-                    android:id="@+id/tv_cj"
                     style="@style/CommonText"
                     android:layout_marginLeft="@dimen/dimen_10"
                     android:maxWidth="100dp"
                     android:minWidth="80dp"
-                    android:singleLine="true"/>
+                    android:singleLine="true"
+                    android:text="@{data.lyr}"/>
                 <TextView style="@style/CommonText"
-                          android:text="出  厂  号："/>
+                          android:text="存放地名称："/>
                 <TextView
-                    android:id="@+id/tv_cch"
                     style="@style/CommonText"
                     android:layout_marginLeft="@dimen/dimen_10"
                     android:maxWidth="100dp"
                     android:minWidth="80dp"
-                    android:singleLine="true"/>
+                    android:singleLine="true"
+                    android:text="@{data.cfdmc}"/>
             </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal"
+                android:paddingBottom="@dimen/dimen_5"
+                android:paddingTop="@dimen/dimen_5">
+                <TextView style="@style/CommonText"
+                          android:text="人员编号："/>
+                <TextView
+                    style="@style/CommonText"
+                    android:layout_marginLeft="@dimen/dimen_10"
+                    android:maxWidth="100dp"
+                    android:minWidth="80dp"
+                    android:singleLine="true"
+                    android:text="@{data.rybh}"/>
+                <TextView style="@style/CommonText"
+                          android:text="存放地编号："/>
+                <TextView
+                    style="@style/CommonText"
+                    android:layout_marginLeft="@dimen/dimen_10"
+                    android:maxWidth="100dp"
+                    android:minWidth="80dp"
+                    android:singleLine="true"
+                    android:text="@{data.cfdbh}"/>
+            </LinearLayout>
+
         </LinearLayout>
     </android.support.v7.widget.CardView>
 </layout>
