--- a/gdzc/src/main/res/drawable/rect_boundshape_gray_white.xml
+++ b/gdzc/src/main/res/drawable/rect_boundshape_gray_white.xml
@@ -3,7 +3,7 @@
     <shape xmlns:android="http://schemas.android.com/apk/res/android"
         android:shape="rectangle"  >
         <!-- 设置边框的大小和颜色 -->
-        <stroke android:width="0.5dp" android:color="@color/gray" />
+        <stroke android:width="0.5dp" android:color="@color/lines_border" />
 
         <!-- 设置矩形内的颜色,此处为透明色 -->
         <solid android:color="@color/white"/>
