--- a/gdzc/src/main/res/layout/adapter_zcxg_item.xml
+++ b/gdzc/src/main/res/layout/adapter_zcxg_item.xml
@@ -1,153 +1,141 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:android="http://schemas.android.com/apk/res/android"
-        xmlns:app="http://schemas.android.com/apk/res-auto">
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content">
+    <LinearLayout android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:layout_margin="@dimen/dimen_10"
+                  android:background="@drawable/rect_boundshape_gray_white"
+                  android:orientation="vertical"
+                  android:paddingLeft="@dimen/dimen_10"
+                  android:paddingRight="@dimen/dimen_10">
 
-    <data>
-        <variable name="data" type="com.gdzc.zcdj.model.ZcxgBean.ListBean"/>
-    </data>
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_margin="@dimen/dimen_10"
-        android:clickable="true"
-        android:foreground="?android:attr/selectableItemBackground"
-        app:cardCornerRadius="2dp">
-        <LinearLayout android:layout_width="match_parent"
-                      android:layout_height="wrap_content"
-                      android:orientation="vertical"
-                      android:padding="@dimen/dimen_5">
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingBottom="@dimen/dimen_5"
-                android:paddingTop="@dimen/dimen_5">
-                <TextView style="@style/CommonText"
-                          android:text="资产名称："/>
-                <TextView
-                    android:id="@+id/tv_zcmc"
-                    style="@style/CommonText"
-                    android:layout_marginLeft="@dimen/dimen_10"
-                    android:maxWidth="100dp"
-                    android:minWidth="80dp"
-                    android:padding="0dp"
-                    android:singleLine="true"/>
-                <TextView style="@style/CommonText"
-                          android:text="分类名称："/>
-                <TextView
-                    android:id="@+id/tv_flmc"
-                    style="@style/CommonText"
-                    android:layout_marginLeft="@dimen/dimen_10"
-                    android:maxWidth="100dp"
-                    android:minWidth="80dp"
-                    android:singleLine="true"/>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingBottom="@dimen/dimen_5"
-                android:paddingTop="@dimen/dimen_5">
-                <TextView style="@style/CommonText"
-                          android:text="单        价："/>
-                <TextView
-                    android:id="@+id/tv_dj"
-                    style="@style/CommonText"
-                    android:layout_marginLeft="@dimen/dimen_10"
-                    android:maxWidth="100dp"
-                    android:minWidth="80dp"
-                    android:singleLine="true"/>
-                <TextView style="@style/CommonText"
-                          android:text="数        量："/>
-                <TextView
-                    android:id="@+id/tv_sl"
-                    style="@style/CommonText"
-                    android:layout_marginLeft="@dimen/dimen_10"
-                    android:maxWidth="100dp"
-                    android:minWidth="80dp"
-                    android:singleLine="true"/>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingBottom="@dimen/dimen_5"
-                android:paddingTop="@dimen/dimen_5">
-                <TextView style="@style/CommonText"
-                          android:text="成批条数："/>
-                <TextView
-                    android:id="@+id/tv_pl"
-                    style="@style/CommonText"
-                    android:layout_marginLeft="@dimen/dimen_10"
-                    android:maxWidth="100dp"
-                    android:minWidth="80dp"
-                    android:singleLine="true"/>
-                <TextView style="@style/CommonText"
-                          android:text="金        额："/>
-                <TextView
-                    android:id="@+id/tv_je"
-                    style="@style/CommonText"
-                    android:layout_marginLeft="@dimen/dimen_10"
-                    android:maxWidth="100dp"
-                    android:minWidth="80dp"
-                    android:singleLine="true"/>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingBottom="@dimen/dimen_5"
-                android:paddingTop="@dimen/dimen_5">
-                <TextView style="@style/CommonText"
-                          android:text="型        号："/>
-                <TextView
-                    android:id="@+id/tv_xh"
-                    style="@style/CommonText"
-                    android:layout_marginLeft="@dimen/dimen_10"
-                    android:maxWidth="100dp"
-                    android:minWidth="80dp"
-                    android:singleLine="true"
-                />
-                <TextView style="@style/CommonText"
-                          android:text="规        格："/>
-                <TextView
-                    android:id="@+id/tv_gg"
-                    style="@style/CommonText"
-                    android:layout_marginLeft="@dimen/dimen_10"
-                    android:maxWidth="100dp"
-                    android:minWidth="80dp"
-                    android:singleLine="true"/>
-            </LinearLayout>
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="horizontal"
-                android:paddingBottom="@dimen/dimen_5"
-                android:paddingTop="@dimen/dimen_5">
-                <TextView style="@style/CommonText"
-                          android:text="厂        家："/>
-                <TextView
-                    android:id="@+id/tv_cj"
-                    style="@style/CommonText"
-                    android:layout_marginLeft="@dimen/dimen_10"
-                    android:maxWidth="100dp"
-                    android:minWidth="80dp"
-                    android:singleLine="true"/>
-                <TextView style="@style/CommonText"
-                          android:text="出  厂  号："/>
-                <TextView
-                    android:id="@+id/tv_cch"
-                    style="@style/CommonText"
-                    android:layout_marginLeft="@dimen/dimen_10"
-                    android:maxWidth="100dp"
-                    android:minWidth="80dp"
-                    android:singleLine="true"/>
-            </LinearLayout>
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+            <TextView style="@style/CommonText"
+                      android:text="资产名称："/>
+            <TextView
+                android:id="@+id/tv_zcmc"
+                style="@style/CommonText"
+                android:layout_marginLeft="@dimen/dimen_10"
+                android:maxWidth="100dp"
+                android:minWidth="80dp"
+                android:padding="0dp"
+                android:singleLine="true"/>
+            <TextView style="@style/CommonText"
+                      android:text="分类名称："/>
+            <TextView
+                android:id="@+id/tv_flmc"
+                style="@style/CommonText"
+                android:layout_marginLeft="@dimen/dimen_10"
+                android:maxWidth="100dp"
+                android:minWidth="80dp"
+                android:singleLine="true"/>
         </LinearLayout>
-    </android.support.v7.widget.CardView>
-</layout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:gravity="center_vertical">
+            <TextView style="@style/CommonText"
+                      android:text="单        价："/>
+            <TextView
+                android:id="@+id/tv_dj"
+                style="@style/CommonText"
+                android:layout_marginLeft="@dimen/dimen_10"
+                android:maxWidth="100dp"
+                android:minWidth="80dp"
+                android:singleLine="true"/>
+            <TextView style="@style/CommonText"
+                      android:text="数        量："/>
+            <TextView
+                android:id="@+id/tv_sl"
+                style="@style/CommonText"
+                android:layout_marginLeft="@dimen/dimen_10"
+                android:maxWidth="100dp"
+                android:minWidth="80dp"
+                android:singleLine="true"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+            <TextView style="@style/CommonText"
+                      android:text="成批条数："/>
+            <TextView
+                android:id="@+id/tv_pl"
+                style="@style/CommonText"
+                android:layout_marginLeft="@dimen/dimen_10"
+                android:maxWidth="100dp"
+                android:minWidth="80dp"
+                android:singleLine="true"/>
+            <TextView style="@style/CommonText"
+                      android:text="金        额："/>
+            <TextView
+                android:id="@+id/tv_je"
+                style="@style/CommonText"
+                android:layout_marginLeft="@dimen/dimen_10"
+                android:maxWidth="100dp"
+                android:minWidth="80dp"
+                android:singleLine="true"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+            <TextView style="@style/CommonText"
+                      android:text="型        号："/>
+            <TextView
+                android:id="@+id/tv_xh"
+                style="@style/CommonText"
+                android:layout_marginLeft="@dimen/dimen_10"
+                android:maxWidth="100dp"
+                android:minWidth="80dp"
+                android:singleLine="true"
+            />
+            <TextView style="@style/CommonText"
+                      android:text="规        格："/>
+            <TextView
+                android:id="@+id/tv_gg"
+                style="@style/CommonText"
+                android:layout_marginLeft="@dimen/dimen_10"
+                android:maxWidth="100dp"
+                android:minWidth="80dp"
+                android:singleLine="true"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+            <TextView style="@style/CommonText"
+                      android:text="厂        家："/>
+            <TextView
+                android:id="@+id/tv_cj"
+                style="@style/CommonText"
+                android:layout_marginLeft="@dimen/dimen_10"
+                android:maxWidth="100dp"
+                android:minWidth="80dp"
+                android:singleLine="true"/>
+            <TextView style="@style/CommonText"
+                      android:text="出  厂  号："/>
+            <TextView
+                android:id="@+id/tv_cch"
+                style="@style/CommonText"
+                android:layout_marginLeft="@dimen/dimen_10"
+                android:maxWidth="100dp"
+                android:minWidth="80dp"
+                android:singleLine="true"/>
+        </LinearLayout>
+    </LinearLayout>
+</LinearLayout>
