--- a/gdzc/src/main/res/layout/fragment_zcxg.xml
+++ b/gdzc/src/main/res/layout/fragment_zcxg.xml
@@ -114,8 +114,8 @@
 
             <View style="@style/line_cell_light_h"/>
 
-            <android.support.v7.widget.RecyclerView
-                android:id="@+id/rv_zcbg"
+            <com.yanzhenjie.recyclerview.swipe.SwipeMenuRecyclerView
+                android:id="@+id/recycler_view"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
         </LinearLayout>
