--- a/gdzc/src/main/res/layout/adapter_zcxg_item.xml
+++ b/gdzc/src/main/res/layout/adapter_zcxg_item.xml
@@ -3,8 +3,10 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content">
-    <LinearLayout android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:orientation="vertical">
+    <LinearLayout android:id="@+id/layout_zcxg"
+                  android:layout_width="match_parent"
                   android:layout_height="wrap_content"
                   android:layout_margin="@dimen/dimen_10"
                   android:background="@drawable/rect_boundshape_gray_white"
@@ -23,6 +25,7 @@
                 android:id="@+id/tv_zcmc"
                 style="@style/CommonText"
                 android:layout_marginLeft="@dimen/dimen_10"
+                android:layout_marginRight="@dimen/dimen_10"
                 android:maxWidth="100dp"
                 android:minWidth="80dp"
                 android:padding="0dp"
@@ -48,6 +51,7 @@
                 android:id="@+id/tv_dj"
                 style="@style/CommonText"
                 android:layout_marginLeft="@dimen/dimen_10"
+                android:layout_marginRight="@dimen/dimen_10"
                 android:maxWidth="100dp"
                 android:minWidth="80dp"
                 android:singleLine="true"/>
@@ -73,6 +77,7 @@
                 android:id="@+id/tv_pl"
                 style="@style/CommonText"
                 android:layout_marginLeft="@dimen/dimen_10"
+                android:layout_marginRight="@dimen/dimen_10"
                 android:maxWidth="100dp"
                 android:minWidth="80dp"
                 android:singleLine="true"/>
@@ -98,6 +103,7 @@
                 android:id="@+id/tv_xh"
                 style="@style/CommonText"
                 android:layout_marginLeft="@dimen/dimen_10"
+                android:layout_marginRight="@dimen/dimen_10"
                 android:maxWidth="100dp"
                 android:minWidth="80dp"
                 android:singleLine="true"
@@ -124,6 +130,7 @@
                 android:id="@+id/tv_cj"
                 style="@style/CommonText"
                 android:layout_marginLeft="@dimen/dimen_10"
+                android:layout_marginRight="@dimen/dimen_10"
                 android:maxWidth="100dp"
                 android:minWidth="80dp"
                 android:singleLine="true"/>
@@ -131,6 +138,98 @@
                       android:text="出  厂  号："/>
             <TextView
                 android:id="@+id/tv_cch"
+                style="@style/CommonText"
+                android:layout_marginLeft="@dimen/dimen_10"
+                android:maxWidth="100dp"
+                android:minWidth="80dp"
+                android:singleLine="true"/>
+        </LinearLayout>
+    </LinearLayout>
+
+    <LinearLayout android:id="@+id/layout_zccx"
+                  android:layout_width="match_parent"
+                  android:layout_height="wrap_content"
+                  android:layout_margin="@dimen/dimen_10"
+                  android:background="@drawable/rect_boundshape_gray_white"
+                  android:orientation="vertical"
+                  android:paddingLeft="@dimen/dimen_10"
+                  android:paddingRight="@dimen/dimen_10"
+                  android:visibility="gone">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+            <TextView style="@style/CommonText"
+                      android:text="资产名称："/>
+            <TextView
+                android:id="@+id/tv_zcmc_cx"
+                style="@style/CommonText"
+                android:layout_marginLeft="@dimen/dimen_10"
+                android:layout_marginRight="@dimen/dimen_10"
+                android:maxWidth="100dp"
+                android:minWidth="80dp"
+                android:padding="0dp"
+                android:singleLine="true"/>
+            <TextView style="@style/CommonText"
+                      android:text="领用单位："/>
+            <TextView
+                android:id="@+id/tv_lydw_cx"
+                style="@style/CommonText"
+                android:layout_marginLeft="@dimen/dimen_10"
+                android:maxWidth="100dp"
+                android:minWidth="80dp"
+                android:singleLine="true"/>
+        </LinearLayout>
+
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+            <TextView style="@style/CommonText"
+                      android:text="型        号："/>
+            <TextView
+                android:id="@+id/tv_xh_cx"
+                style="@style/CommonText"
+                android:layout_marginLeft="@dimen/dimen_10"
+                android:layout_marginRight="@dimen/dimen_10"
+                android:maxWidth="100dp"
+                android:minWidth="80dp"
+                android:singleLine="true"
+            />
+            <TextView style="@style/CommonText"
+                      android:text="规        格："/>
+            <TextView
+                android:id="@+id/tv_gg_cx"
+                style="@style/CommonText"
+                android:layout_marginLeft="@dimen/dimen_10"
+                android:maxWidth="100dp"
+                android:minWidth="80dp"
+                android:singleLine="true"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="30dp"
+            android:gravity="center_vertical"
+            android:orientation="horizontal">
+            <TextView style="@style/CommonText"
+                      android:text="厂        家："/>
+            <TextView
+                android:id="@+id/tv_cj_cx"
+                style="@style/CommonText"
+                android:layout_marginLeft="@dimen/dimen_10"
+                android:layout_marginRight="@dimen/dimen_10"
+                android:maxWidth="100dp"
+                android:minWidth="80dp"
+                android:singleLine="true"/>
+            <TextView style="@style/CommonText"
+                      android:text="领  用  人："/>
+            <TextView
+                android:id="@+id/tv_lyr_cx"
                 style="@style/CommonText"
                 android:layout_marginLeft="@dimen/dimen_10"
                 android:maxWidth="100dp"
